Added keywords entry to composer.json

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,10 @@
             "Drewlabs\\Curl\\": "src/"
         }
     },
+    "keywords": [
+        "curl",
+        "http"
+    ],
     "authors": [
         {
             "name": "azandrew-sidoine",
