--- a/composer.json
+++ b/composer.json
@@ -22,17 +22,18 @@
     "prefer-stable": true,
     "require": {
         "php": ">=7.0",
-        "ext-curl": "*",
-        "drewlabs/psr7-stream": "^1.2"
+        "ext-curl": "*"
     },
     "require-dev": {
         "donatj/mock-webserver": "^2.5",
         "phpunit/phpunit": ">=6.0",
         "psr/http-client": "^1.0",
-        "drewlabs/psr7": "^0.1.1"
+        "drewlabs/psr7": "^0.1.1",
+        "drewlabs/psr7-stream": "^1.2"
     },
     "suggest": {
         "psr/http-client": "Expected to use Psr18Client curl client",
-        "drewlabs/psr7": "Psr7 implementation require for Psr18Client curl client usage"
+        "drewlabs/psr7": "Psr7 implementation require for Psr18Client curl client usage",
+        "drewlabs/psr7-stream": "Psr7 stream required for Psr18Client curl client usage"
     }
 }
