Fixed php 7.0 related bugs

--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,6 @@
     },
     "require-dev": {
         "donatj/mock-webserver": "^2.5",
-        "phpunit/phpunit": ">=6.0"
+        "phpunit/phpunit": "^6.0"
     }
 }
