--- a/composer.json
+++ b/composer.json
@@ -21,12 +21,12 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": ">=7.0",
+        "php": ">=7.2",
         "ext-curl": "*"
     },
     "require-dev": {
         "donatj/mock-webserver": "^2.5",
-        "phpunit/phpunit": "^6.0"
+        "phpunit/phpunit": ">=8.0"
     },
     "config": {
         "optimize-autoloader": true,
