Fixed nullable type warning

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,11 @@
             "Drewlabs\\Curl\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Drewlabs\\Curl\\Tests": "src/"
+        }
+    },
     "keywords": [
         "curl",
         "http"
